--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "com.android.support:appcompat-v7:27.1.0"
+    compile 'com.android.support:recyclerview-v7:27.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 }
